--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,42 @@
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - "${PORT:-80}:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/apps:/etc/nginx/conf.d/apps:ro
+      - ./nginx/utils:/etc/nginx/conf.d/utils:ro
+    command: [nginx-debug, '-g', 'daemon off;']
+    depends_on:
+      - web
+      - agent
   agent:
     build:
       context: ./agent
       dockerfile: Dockerfile
       args:
         NODE_ENV: ${NODE_ENV:-production}
-    ports:
-      - "${AGENT_PORT}:3000"
     environment:
-      - NODE_ENV=${NODE_ENV-production}
-      - FRONTEND_URL=${PUBLIC_URL:-http://localhost:${WEB_PORT}}
+      - NODE_ENV=${NODE_ENV:-production}
+      - PUBLIC_URL=http://localhost
     volumes:
-      - ./agent:/app
-      - /app/node_modules  # Prevents overwriting `node_modules` in the container
+      - type: bind
+        source: ./agent
+        target: /app
+      - type: bind
+        source: ./modules
+        target: /modules
   web:
     build:
       context: ./web
       dockerfile: Dockerfile
       args:
         NODE_ENV: ${NODE_ENV:-production}
-    ports:
-      - "${WEB_PORT:-3001}:3000"
     environment:
       - NODE_ENV=${NODE_ENV:-production}
-      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:${AGENT_PORT}}
+      - NEXT_PUBLIC_API_URL=http://localhost
     volumes:
-      - ./web:/app
-      - /app/node_modules  # Prevents overwriting `node_modules` in the container
+      - type: bind
+        source: ./web
+        target: /app
