--- a/agent/package.json
+++ b/agent/package.json
@@ -8,11 +8,9 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-
     "docker": "npm run docker:${NODE_ENV-development}",
     "docker:development": "npm run start:dev",
     "docker:production": "npm run start:prod",
-
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -26,10 +24,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
