feat: add pwa toast, fix manifest

--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -17,5 +17,13 @@
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#000000"
+    "theme_color": "#000000",
+    "screenshots": [
+      {
+        "src": "/screenshots/screenshot-narrow.jpg",
+        "sizes": "540x1171",
+        "type": "image/jpeg",
+        "form_factor": "narrow"
+      }
+    ]
   }
