feat: added basic configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,3 @@
 # Environment configuration
 NODE_ENV=development # Can be 'development', 'production', or 'debug'
-
-# Ports
-AGENT_PORT=3000
-WEB_PORT=3001
-
-# URLs
-PUBLIC_URL=http://localhost:${AGENT_PORT}
-NEXT_PUBLIC_API_URL=http://localhost:${AGENT_PORT}
+COMPOSE_PROJECT_NAME=proteus
