--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -11,6 +11,9 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noImplicitAny": false,
+    "noImplicitThis": true,
+    "strictNullChecks": false,
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
