--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,14 @@ services:
       dockerfile: Dockerfile
       args:
         NODE_ENV: ${NODE_ENV:-production}
+        TERRAFORM_VERSION: ${TERRAFORM_VERSION:-1.10.5}
+    command: npm run start:dev
     environment:
       - NODE_ENV=${NODE_ENV:-production}
-      - PUBLIC_URL=http://localhost
+      - MODULES_PATH=/modules
+      - FRONTEND_PUBLIC_ENDPOINT=http://localhost:${PORT:-80}
+      - TERRAFORM_PLATFORM_NAME=${TERRAFORM_PLATFORM_NAME:-proteus}
+      - TERRAFORM_DOMAIN_NAME=${COMPOSE_PROJECT_NAME:-proteus}
     volumes:
       - type: bind
         source: ./agent
@@ -30,12 +35,33 @@ services:
   web:
     build:
       context: ./web
-      dockerfile: Dockerfile
+      # dockerfile: Dockerfile
+      dockerfile_inline: |
+        # Stage 1: Build
+        FROM node:lts-alpine AS builder
+
+        ARG NODE_ENV="production"
+
+        # Set the working directory
+        WORKDIR /app
+
+        # Copy the rest of the application code
+        COPY . .
+
+        # Clean old cache files
+        RUN rm -rf ./dist ./node_modules
+
+        # Build the application
+        RUN npm ci
       args:
         NODE_ENV: ${NODE_ENV:-production}
+    command: npm run dev
+    depends_on:
+      - agent
     environment:
       - NODE_ENV=${NODE_ENV:-production}
-      - NEXT_PUBLIC_API_URL=http://localhost
+      - NEXT_PUBLIC_API_ENDPOINT=http://localhost:${PORT:-80}
+      - NEXT_INTERNAL_API_ENDPOINT=http://agent:3000
     volumes:
       - type: bind
         source: ./web
